# LLM-Quantization-Lab

./: .gitignore  FILE_MANIFEST.txt  README.md  config.env.example  hf_model_card_template.md  main.py  project.env  pyproject.toml  run_pipeline.sh
data/: README.md  prompts.txt
models/: README.md
models/gguf/: README.md
models/gguf/quantized/: README.md
results/: README.md
results/environment/: environment.txt
scripts/: 00_install_dependencies.sh  01_setup_llama_cpp.sh  02_download_model.sh  03_convert_to_gguf.sh  04_quantize_models.sh  05_collect_sizes.sh  06_benchmark_speed.sh  07_prepare_wikitext2.sh  08_benchmark_perplexity.sh  09_generate_samples.sh  10_collect_environment.sh  11_generate_checksums.sh  12_prepare_hf_upload.sh  13_upload_huggingface.sh  README.md
scripts/lib/: README.md  common.sh
