[project]
name = "quantization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.20.1",
    "numpy>=2.5.0",
    "pandas>=3.0.4",
    "psutil>=7.2.2",
    "requests>=2.34.2",
    "safetensors>=0.8.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]
